fix: empty notifications config check
(cherry picked from commit 25d8127711d09876b542b4b4831ed957ea38a5b1)